tests/mm0_mmu/fail/bad-sort4231.mm0
-- bad modifier order
free strict provable pure sort s4231;